@@ -1,7 +1,7 @@
 #  File src/library/stats/R/expand.model.frame.R
 #  Part of the R package, https://www.R-project.org
 #
-#  Copyright (C) 1995-2012 The R Core Team
+#  Copyright (C) 1995-2022 The R Core Team
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -20,9 +20,10 @@ expand.model.frame <- function(model, extras,
                                envir=environment(formula(model)),
                                na.expand=FALSE)
 {
+    cl <- getCall(model)
+
     ## don't use model$call$formula -- it might be a variable name
     f <- formula(model)
-    data <- eval(model$call$data, envir)
 
     # new formula (there must be a better way...)
     ff <- foo ~ bar + baz
@@ -33,15 +34,13 @@ expand.model.frame <- function(model, extras,
     ff[[2L]] <- f[[2L]]
     ff[[3L]][[2L]] <- f[[3L]]
     ff[[3L]][[3L]] <- gg[[2L]]
+    environment(ff) <- envir
 
     if (!na.expand){
-        naa <- model$call$na.action
-        subset <- model$call$subset
-        rval <- eval(call("model.frame", ff, data = data, subset = subset,
-                          na.action = naa), envir)
+        rval <- eval(call("model.frame", ff, data = cl$data, subset = cl$subset,
+                          na.action = cl$na.action), envir)
     } else {
-        subset <- model$call$subset
-        rval <- eval(call("model.frame", ff, data = data, subset = subset,
+        rval <- eval(call("model.frame", ff, data = cl$data, subset = cl$subset,
                           na.action = I), envir)
         oldmf <- model.frame(model)
         keep <- match(rownames(oldmf), rownames(rval))
